--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,48 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-  
+
   <%= csrf_meta_tags %>
 </head>
 <body>
 
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+<div class="container">
+
+
+
+<div class="page-header">
+
+<ul class="nav nav-tabs pull-right">
+	<li class="active"><a href="about.html.erb">Home</a></li>
+	<li><a href="about">About</a></li>
+</ul>
+
+	<h1><a href="about">crumblr</a>
+	<small>
+		&nbsp // home baked goodness
+	</small>
+	</h1>
+</div>
+
+
+<div class="row">
+<div class="col-md-6 col-md-offset-3">
+	
 <%= yield %>
+
+</div>
+	</div>
+</div>
+</body>
+</html>
+
+
 
 </body>
 </html>
