--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,13 +24,14 @@
 <div class="page-header">
 
 <ul class="nav nav-tabs pull-right">
-	<li class="active"><a href="about.html.erb">Home</a></li>
-	<li><a href="about">About</a></li>
+	<li class="active"> <a href="/about">Home</a></li>
+	<li> <a href="../posts">Manage Cards</a> </li>
+	<li> <a href="story">Story</a></li>
 </ul>
 
-	<h1><a href="about">crumblr</a>
+	<h1><a href="about">Gainstorm</a>
 	<small>
-		&nbsp // home baked goodness
+		&nbsp // cards for corporate gain
 	</small>
 	</h1>
 </div>
