--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,27 @@
-<p id="notice"><%= notice %></p>
-
+<% if notice.present? %>
+<p class="alert alert-success">
+<%= notice %></p>
 <p>
-  <strong>Title:</strong>
+<% end %>
+
+  <h2>
   <%= @post.title %>
+  </h2>
 </p>
 
 <p>
-  <strong>Directions:</strong>
+  
   <%= @post.directions %>
 </p>
 
 <p>
-  <strong>Content:</strong>
-  <%= @post.content %>
+  
+  <%= simple_format @post.content %>
 </p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<p class="text-muted">
+	<small>
+	Posted on <%= @post.created_at.to_formatted_s(:long) %>
+</small>
+</p>
+
