--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
 
-<h1>
+<h1 id="card-home">
 <%= Post.order("RANDOM()").first.title %>
 </h1>
 
 <a href="javascript:document.location.reload();"
->Refresh</a>
+>Next Card</a>
