--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,22 +23,20 @@
 
 <div class="page-header">
 
-<ul class="nav nav-tabs pull-right">
-	<li class="active"> <a href="/about">Home</a></li>
-	<li> <a href="../posts">Manage Cards</a> </li>
-	<li> <a href="story">Story</a></li>
+<ul class="nav nav-pills pull-right">
+	<li id="small-link-hide"> <%= link_to 'Card', "/" %> </li>
+	<li id="small-link"> <a href="../posts">+ Card</a> </li>
 </ul>
 
-	<h1><a href="about">Gainstorm</a>
-	<small>
-		&nbsp // cards for corporate gain
-	</small>
-	</h1>
+	<h1><small> <%= link_to 'Vectorstorm', "/" %>
+	<small id="subhead-a">&nbsp// by SRG
+		
+	</small></small></h1>
 </div>
 
 
 <div class="row">
-<div class="col-md-6 col-md-offset-3">
+<div class="col-md-6">
 	
 <%= yield %>
 
