--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,5 +3,9 @@
 <%= Post.order("RANDOM()").first.title %>
 </h1>
 
+<h1 class="project-label" id="card-home"> <!=Place the type of product you are creating below =>
+Cookies
+</h1>
+
 <a href="javascript:document.location.reload();"
 >Next Card</a>
