--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Gainstorm</title>
+  <title>Cookiestorm</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
@@ -14,7 +14,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Cookiestorm</title>
 </head>
 <body>
 <div class="container">
@@ -28,7 +28,7 @@
 	<li id="small-link"> <a href="../posts">+ Card</a> </li>
 </ul>
 
-	<h1><small> <%= link_to 'Vectorstorm', "/" %>
+	<h1><small> <%= link_to 'Cookiestorm', "/" %>
 	<small id="subhead-a">&nbsp// by SRG
 		
 	</small></small></h1>
